--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
-# Ignore config.php
+# Ignore config.php in any directory
 config.php
+
 # Ignore forums
 phpBB3/
 forum/
 xcache-admin/
+
 # Ignore all dotfiles...
 .*
-# except for .gitignore
+# ...except for .gitignore
 !.gitignore
 !.gitattributes
+
+# Ignore backups
+admin/backup/*.gz
