--- a/docs/config.php.sample
+++ b/docs/config.php.sample
@@ -1,12 +1,14 @@
 <?php
 if(!defined("INSIDE")){ die("attemp hacking"); }
+
 $dbsettings = Array(
-"server"     => "localhost",      // MySQL сервер.
-"user"       => "MYSQL_USERNAME", // Логин доступа MySQL сервера.
-"pass"       => "MYSQL_PASSWORD", // Пароль доступа MySQL сервера.
-"name"       => "MYSQL_DBNAME",   // Название MySQL базы.
-"prefix"     => "sn_",            // Префикс для таблиц в базе.
-"secretword" => "SUPERNOVA");     // Ключевое слово для создания Cookies. (Не забудьте изменить на своё!)
+  "server"     => "localhost",      // MySQL сервер.
+  "user"       => "MYSQL_USERNAME", // Логин доступа MySQL сервера.
+  "pass"       => "MYSQL_PASSWORD", // Пароль доступа MySQL сервера.
+  "name"       => "MYSQL_DBNAME",   // Название MySQL базы.
+  "prefix"     => "sn_",            // Префикс для таблиц в базе.
+  "secretword" => "SUPERNOVA",      // Ключевое слово для создания Cookies. (Не забудьте изменить на своё!)
+);     
 
 $game['prefix'] = $dbsettings['prefix'];
 ?>
