--- a/language/en/lang_info.cfg
+++ b/language/en/lang_info.cfg
@@ -5,11 +5,13 @@
 #  Create date: Sunday, March 30, 2008   19:56:23
 #  Project: prethOgame
 #  Description: RPG web based game
-#
+#  
+#  EN File Version : v26e18
+#  
 #  Copyright © 2008 Aleksandar Spasojevic <spalekg@gmail.com>
 #  Copyright © 2005 - 2008 KGsystem
 #############################################################################
 */
-$langInfos['ENCODING']   = "windows-1251";
+$langInfos['ENCODING']   = "windows-1252";
 $langInfos['DIRECTION']  = "http://ogame.triolan.com.ua/phpBB3";
 ?>
