feat-SYS-33a5: Added support for server-side player avatar. Added display of player sex

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ t.*
 # Ignore cache folder
 /cache/
 
+# Ignore cache folder
+/images/avatar/
+
 # Ignore backup folder
 /admin/sxd/cfg.php
 /admin/sxd/error.log
