--- a/docs/config.php.sample
+++ b/docs/config.php.sample
@@ -6,9 +6,9 @@ $dbsettings = Array(
   "user"       => "supernova_user", // Логин доступа MySQL сервера.
   "pass"       => "MYSQL_PASSWORD", // Пароль доступа MySQL сервера.
   "name"       => "supernova",      // Название MySQL базы.
-  "prefix"     => "sn_",            // Префикс для таблиц в базе.
+  "prefix"     => "sn_",            // Префикс для таблиц в базе и для xCache. ИСПОЛЬЗУЙТЕ РАЗНЫЕ ПРЕФИКСЫ, ЕСЛИ НА ОДНОМ СЕРВЕРЕ РАБОТАЕТ НЕСКОЛЬКО КОПИЙ SN!!!
   "secretword" => "SUPERNOVA",      // Ключевое слово для создания Cookies. (Не забудьте изменить на своё!)
-);     
+);
 
 $game['prefix'] = $dbsettings['prefix'];
 ?>
