DB-feat-40a10.13: DB redo Phase 4

--- a/docs/config.php.sample
+++ b/docs/config.php.sample
@@ -1,7 +1,8 @@
 <?php
 if(!defined("INSIDE")){ die("attemp hacking"); }
 
-$dbsettings = Array(
+$dbsettings = array(
+  'sn_driver'  => 'db_mysql_v5',    // db_mysql_v5 - MySQLi, db_mysql_v4 - простой MySQL. Можно написать свой драйвер
   "server"     => "localhost",      // MySQL сервер.
   "user"       => "supernova_user", // Логин доступа MySQL сервера.
   "pass"       => "MYSQL_PASSWORD", // Пароль доступа MySQL сервера.
@@ -11,4 +12,3 @@ $dbsettings = Array(
 );
 
 $game['prefix'] = $dbsettings['prefix'];
-?>
