DESIGN-feat-40a18.2: Design v2 Phase 16 - skin.ini

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -13,6 +13,7 @@
 
 ; Some black magic to support JS-templating
 UNIT_ID = "gebaeude/[UNIT_ID].gif"
+PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 
 1 = "gebaeude/1.gif"
 1001 = "gebaeude/1001.jpg"
@@ -59,7 +60,7 @@ UNIT_ID = "gebaeude/[UNIT_ID].gif"
 204 = "gebaeude/204.gif"
 205 = "gebaeude/205.gif"
 206 = "gebaeude/206.gif"
-206 = "gebaeude/206.jpg"
+;206 = "gebaeude/206.jpg"
 207 = "gebaeude/207.gif"
 208 = "gebaeude/208.gif"
 209 = "gebaeude/209.gif"
@@ -102,48 +103,48 @@ UNIT_ID = "gebaeude/[UNIT_ID].gif"
 42 = "gebaeude/42.gif"
 43 = "gebaeude/43.gif"
 44 = "gebaeude/44.gif"
-44 = "gebaeude/44.jpg"
+;44 = "gebaeude/44.jpg"
 501 = "gebaeude/501.gif"
 502 = "gebaeude/502.gif"
 503 = "gebaeude/503.gif"
-601 = "gebaeude/601.gif"
+;601 = "gebaeude/601.gif"
 601 = "gebaeude/601.jpg"
-602 = "gebaeude/602.gif"
+;602 = "gebaeude/602.gif"
 602 = "gebaeude/602.jpg"
-603 = "gebaeude/603.gif"
+;603 = "gebaeude/603.gif"
 603 = "gebaeude/603.jpg"
-604 = "gebaeude/604.gif"
+;604 = "gebaeude/604.gif"
 604 = "gebaeude/604.jpg"
-605 = "gebaeude/605.gif"
+;605 = "gebaeude/605.gif"
 605 = "gebaeude/605.jpg"
-606 = "gebaeude/606.gif"
+;606 = "gebaeude/606.gif"
 606 = "gebaeude/606.jpg"
-607 = "gebaeude/607.gif"
+;607 = "gebaeude/607.gif"
 607 = "gebaeude/607.jpg"
-608 = "gebaeude/608.gif"
+;608 = "gebaeude/608.gif"
 608 = "gebaeude/608.jpg"
-609 = "gebaeude/609.gif"
+;609 = "gebaeude/609.gif"
 609 = "gebaeude/609.jpg"
-610 = "gebaeude/610.gif"
+;610 = "gebaeude/610.gif"
 610 = "gebaeude/610.jpg"
-611 = "gebaeude/611.gif"
+;611 = "gebaeude/611.gif"
 611 = "gebaeude/611.jpg"
-612 = "gebaeude/612.gif"
+;612 = "gebaeude/612.gif"
 612 = "gebaeude/612.jpg"
-613 = "gebaeude/613.gif"
+;613 = "gebaeude/613.gif"
 613 = "gebaeude/613.jpg"
-614 = "gebaeude/614.gif"
+;614 = "gebaeude/614.gif"
 614 = "gebaeude/614.jpg"
-615 = "gebaeude/615.gif"
+;615 = "gebaeude/615.gif"
 615 = "gebaeude/615.jpg"
 901 = "gebaeude/901.jpg"
 902 = "gebaeude/902.jpg"
 903 = "gebaeude/903.jpg"
 904 = "gebaeude/904.jpg"
 905 = "gebaeude/905.jpg"
-help = "gfx/info-help.jpg"
-produktion = "gfx/ogame-produktion.jpg"
-menu = "gfx/user-menu.jpg"
+;help = "gfx/info-help.jpg"
+;produktion = "gfx/ogame-produktion.jpg"
+;menu = "gfx/user-menu.jpg"
 menu_affiliates = "icons/menu_affiliates.png"
 menu_ally = "icons/menu_ally.png"
 menu_ally_chat = "icons/menu_ally_chat.png"
@@ -219,34 +220,31 @@ background_1600 = "img/background_1600.jpg"
 background_1920 = "img/background_1920.jpg"
 background_medium = "img/background_medium.jpg"
 background_original = "img/background_original.jpg"
-background_original = "img/background_original.png"
 bg1 = "img/bg1.gif"
 bg2 = "img/bg2.gif"
 blank = "img/blank.gif"
 blitz_background = "img/blitz_background.jpg"
 blitz_background_medium = "img/blitz_background_medium.jpg"
-e = "img/e.jpg"
-galaxie = "img/galaxie.gif"
-p = "img/p.png"
-p1 = "img/p1.jpg"
-p1z1 = "img/p1z1.png"
-p2 = "img/p2.jpg"
-p2z2 = "img/p2z2.png"
-p3 = "img/p3.jpg"
-p3z2 = "img/p3z2.png"
-p4 = "img/p4.jpg"
-p5 = "img/p5.jpg"
-p6 = "img/p6.jpg"
-p7 = "img/p7.jpg"
-p8 = "img/p8.jpg"
-p9 = "img/p9.jpg"
+;e = "img/e.jpg"
+;galaxie = "img/galaxie.gif"
+;p = "img/p.png"
+;p1 = "img/p1.jpg"
+;p1z1 = "img/p1z1.png"
+;p2 = "img/p2.jpg"
+;p2z2 = "img/p2z2.png"
+;p3 = "img/p3.jpg"
+;p3z2 = "img/p3z2.png"
+;p4 = "img/p4.jpg"
+;p5 = "img/p5.jpg"
+;p6 = "img/p6.jpg"
+;p7 = "img/p7.jpg"
+;p8 = "img/p8.jpg"
+;p9 = "img/p9.jpg"
 s = "img/s.gif"
-saturn2 = "img/saturn2.jpg"
-srgs = "img/srgs.jpg"
-starz2 = "img/starz2.png"
-abort = "pic/abort.gif"
-appwiz = "pic/appwiz.gif"
-key = "pic/key.gif"
+;saturn2 = "img/saturn2.jpg"
+;srgs = "img/srgs.jpg"
+;starz2 = "img/starz2.png"
+abort = "images/abort.gif"
 black_moon = "planeten/black_moon.jpg"
 black_planet = "planeten/black_planet.jpg"
 debris = "planeten/debris.jpg"
@@ -368,12 +366,12 @@ s_wasserplanet07 = "planeten/small/s_wasserplanet07.jpg"
 s_wasserplanet08 = "planeten/small/s_wasserplanet08.jpg"
 s_wasserplanet09 = "planeten/small/s_wasserplanet09.jpg"
 ; s_[PLANET_IMAGE] = "planeten/small/s_[PLANET_IMAGE].jpg"
-wasserplanet01 = "planeten/small/wasserplanet01.jpg"
-wasserplanet02 = "planeten/small/wasserplanet02.jpg"
-wasserplanet03 = "planeten/small/wasserplanet03.jpg"
-wasserplanet04 = "planeten/small/wasserplanet04.jpg"
-wasserplanet05 = "planeten/small/wasserplanet05.jpg"
-wasserplanet06 = "planeten/small/wasserplanet06.jpg"
-wasserplanet07 = "planeten/small/wasserplanet07.jpg"
-wasserplanet08 = "planeten/small/wasserplanet08.jpg"
-wasserplanet09 = "planeten/small/wasserplanet09.jpg"
+l_wasserplanet01 = "planeten/large/wasserplanet01.jpg"
+l_wasserplanet02 = "planeten/large/wasserplanet02.jpg"
+l_wasserplanet03 = "planeten/large/wasserplanet03.jpg"
+l_wasserplanet04 = "planeten/large/wasserplanet04.jpg"
+l_wasserplanet05 = "planeten/large/wasserplanet05.jpg"
+l_wasserplanet06 = "planeten/large/wasserplanet06.jpg"
+l_wasserplanet07 = "planeten/large/wasserplanet07.jpg"
+l_wasserplanet08 = "planeten/large/wasserplanet08.jpg"
+l_wasserplanet09 = "planeten/large/wasserplanet09.jpg"
