--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -10,8 +10,12 @@
 
 ; array_test[index_test] = "pic/test"
 
+_inherit = "EpicBlue"
 
+; Some black magic to support JS-templating
 UNIT_ID = "gebaeude/[UNIT_ID].gif"
+PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
+
 1 = "gebaeude/1.gif"
 1001 = "gebaeude/1001.jpg"
 1002 = "gebaeude/1002.jpg"
@@ -242,9 +246,7 @@ s = "img/s.gif"
 saturn2 = "img/saturn2.jpg"
 srgs = "img/srgs.jpg"
 starz2 = "img/starz2.png"
-abort = "pic/abort.gif"
-appwiz = "pic/appwiz.gif"
-key = "pic/key.gif"
+abort = "images/abort.gif"
 black_moon = "planeten/black_moon.jpg"
 black_planet = "planeten/black_planet.jpg"
 debris = "planeten/debris.jpg"
