SKIN-fix-40a18.10: Fixed Rockeet Silo picture index in supernova-ivash

--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -104,7 +104,7 @@ PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 42 = "gebaeude/42.gif"
 43 = "gebaeude/43.gif"
 44 = "gebaeude/44.gif"
-44 = "gebaeude/44.jpg"
+44 = "gebaeude/44.gif"
 501 = "gebaeude/501.gif"
 502 = "gebaeude/502.gif"
 503 = "gebaeude/503.gif"
