INT-feat-40a18.11: New look for Technology page with tabs and images

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -142,6 +142,7 @@ PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 903 = "gebaeude/903.jpg"
 904 = "gebaeude/904.jpg"
 905 = "gebaeude/905.jpg"
+950 = "gebaeude/950.png"
 ;help = "gfx/info-help.jpg"
 ;produktion = "gfx/ogame-produktion.jpg"
 ;menu = "gfx/user-menu.jpg"
