--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -61,7 +61,7 @@ PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 204 = "gebaeude/204.gif"
 205 = "gebaeude/205.gif"
 206 = "gebaeude/206.gif"
-206 = "gebaeude/206.jpg"
+;206 = "gebaeude/206.jpg"
 207 = "gebaeude/207.gif"
 208 = "gebaeude/208.gif"
 209 = "gebaeude/209.gif"
