MENU-misc-40a19.22: Added icon for Best Battles

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -376,3 +376,5 @@ l_wasserplanet06 = "planeten/large/wasserplanet06.jpg"
 l_wasserplanet07 = "planeten/large/wasserplanet07.jpg"
 l_wasserplanet08 = "planeten/large/wasserplanet08.jpg"
 l_wasserplanet09 = "planeten/large/wasserplanet09.jpg"
+
+menu_info_best_battles = "icons/menu_info_best_battles.png"
