SKIN-feat-40b0.6: Support for HTTP-root pathes in skin.ini. NavBar images now uses {I_xxx} constructs. supernova-ivash had themed navbar icons

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -10,11 +10,50 @@
 
 ; array_test[index_test] = "pic/test"
 
+;<image name> = "<path>"
+;<image name> can be:
+;    - plain string with underscores, i.e.
+;        1
+;        navbar_research
+;    - array ????????
+
+;<path> can be:
+;    - relative, inside the skin:
+;        - "gebaeude/1.gif" will become "skins/EpicBlue/gebaeude/1.gif"
+;    - relative, outside the skin:
+;        - "../../design/images/navbar_hangar.png" will become "skins/EpicBlue/../../design/images/navbar_hangar.png" and points to image on site root image folder because this file is currently 2 levels deep
+;    - absolute to HTTP-root - starting with '/':
+;        - '/design/images/navbar_hangar.png' will become 'http://localhost/supernova/design/images/navbar_hangar.png' if current SN HTTP root is located in http://localhost/supernova/
+
+;In template images addresses with {I_<image name address>}
+;<image name address> can be:
+;    - <image name> from above:
+;        - {I_navbar_hangar} will resolve to path to image with name "navbar_hangar"
+;    - PTL template variable:
+;        - {I_[TOPNAV_CURRENT_PLANET_IMAGE]} will resolve to path with image name from "TOPNAV_CURRENT_PLANET_IMAGE" PTL variable
+;        - ??? PTL variable "$xxx" support ?
+;        - ??? PTL block name "xxx.yyy" support ?
+
 
 ; Some black magic to support JS-templating
 UNIT_ID = "gebaeude/[UNIT_ID].gif"
 PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 
+; NavBar
+navbar_research = "/design/images/navbar_research_64x64.png"
+navbar_research_wide = "/design/images/navbar_research_standard.png"
+navbar_hangar = "/design/images/navbar_hangar.png"
+navbar_expedition = "/design/images/navbar_expedition_standard.png"
+navbar_fleet_own = "/design/images/navbar_fleet_own_standard.png"
+navbar_quest = "/design/images/navbar_quest_standard.png"
+navbar_mail = "/design/images/navbar_mail_standard.png"
+navbar_dark_matter = "/design/images/navbar_dark_matter_standard.png"
+navbar_metamatter = "/design/images/navbar_metamatter_standard.png"
+
+; Icons
+r1 = "/design/images/r1.png"
+
+; Units
 1 = "gebaeude/1.gif"
 1001 = "gebaeude/1001.jpg"
 1002 = "gebaeude/1002.jpg"
@@ -60,7 +99,6 @@ PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 204 = "gebaeude/204.gif"
 205 = "gebaeude/205.gif"
 206 = "gebaeude/206.gif"
-;206 = "gebaeude/206.jpg"
 207 = "gebaeude/207.gif"
 208 = "gebaeude/208.gif"
 209 = "gebaeude/209.gif"
@@ -103,39 +141,23 @@ PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 42 = "gebaeude/42.gif"
 43 = "gebaeude/43.gif"
 44 = "gebaeude/44.gif"
-;44 = "gebaeude/44.jpg"
 501 = "gebaeude/501.gif"
 502 = "gebaeude/502.gif"
 503 = "gebaeude/503.gif"
-;601 = "gebaeude/601.gif"
 601 = "gebaeude/601.jpg"
-;602 = "gebaeude/602.gif"
 602 = "gebaeude/602.jpg"
-;603 = "gebaeude/603.gif"
 603 = "gebaeude/603.jpg"
-;604 = "gebaeude/604.gif"
 604 = "gebaeude/604.jpg"
-;605 = "gebaeude/605.gif"
 605 = "gebaeude/605.jpg"
-;606 = "gebaeude/606.gif"
 606 = "gebaeude/606.jpg"
-;607 = "gebaeude/607.gif"
 607 = "gebaeude/607.jpg"
-;608 = "gebaeude/608.gif"
 608 = "gebaeude/608.jpg"
-;609 = "gebaeude/609.gif"
 609 = "gebaeude/609.jpg"
-;610 = "gebaeude/610.gif"
 610 = "gebaeude/610.jpg"
-;611 = "gebaeude/611.gif"
 611 = "gebaeude/611.jpg"
-;612 = "gebaeude/612.gif"
 612 = "gebaeude/612.jpg"
-;613 = "gebaeude/613.gif"
 613 = "gebaeude/613.jpg"
-;614 = "gebaeude/614.gif"
 614 = "gebaeude/614.jpg"
-;615 = "gebaeude/615.gif"
 615 = "gebaeude/615.jpg"
 901 = "gebaeude/901.jpg"
 902 = "gebaeude/902.jpg"
@@ -143,9 +165,8 @@ PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 904 = "gebaeude/904.jpg"
 905 = "gebaeude/905.jpg"
 950 = "gebaeude/950.png"
-;help = "gfx/info-help.jpg"
-;produktion = "gfx/ogame-produktion.jpg"
-;menu = "gfx/user-menu.jpg"
+
+; Menu
 menu_affiliates = "icons/menu_affiliates.png"
 menu_ally = "icons/menu_ally.png"
 menu_ally_chat = "icons/menu_ally_chat.png"
