--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -16,6 +16,17 @@ _inherit = "EpicBlue"
 UNIT_ID = "gebaeude/[UNIT_ID].gif"
 PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 
+; NavBar
+navbar_research = "navbar/navbar_research_64x64.png"
+navbar_research_wide = "navbar/navbar_research_standard.png"
+navbar_hangar = "navbar/navbar_hangar.png"
+navbar_expedition = "navbar/navbar_expedition_standard.png"
+navbar_fleet_own = "navbar/navbar_fleet_own_standard.png"
+navbar_quest = "navbar/navbar_quest_standard.png"
+navbar_mail = "navbar/navbar_mail_standard.png"
+navbar_dark_matter = "navbar/navbar_dark_matter_standard.png"
+;navbar_metamatter = "/design/images/navbar_metamatter_standard.png"
+
 1 = "gebaeude/1.gif"
 1001 = "gebaeude/1001.jpg"
 1002 = "gebaeude/1002.jpg"
