SKIN-misc-40b0.7: Added navbar button for MM

--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -25,7 +25,7 @@ navbar_fleet_own = "navbar/navbar_fleet_own_standard.png"
 navbar_quest = "navbar/navbar_quest_standard.png"
 navbar_mail = "navbar/navbar_mail_standard.png"
 navbar_dark_matter = "navbar/navbar_dark_matter_standard.png"
-;navbar_metamatter = "/design/images/navbar_metamatter_standard.png"
+navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 
 1 = "gebaeude/1.gif"
 1001 = "gebaeude/1001.jpg"
