INT-misc-40b0.15: Some images in EB and SN-I skins adjusted their real contents with extension

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -37,7 +37,7 @@
 
 ; Some black magic to support JS-templating
 UNIT_ID = "gebaeude/[UNIT_ID].gif"
-PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
+PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].png"
 
 ; NavBar
 navbar_research = "/design/images/navbar_research_64x64.png"
@@ -60,7 +60,7 @@ r1 = "/design/images/r1.png"
 1003 = "gebaeude/1003.jpg"
 1004 = "gebaeude/1004.jpg"
 1005 = "gebaeude/1005.jpg"
-1006 = "gebaeude/1006.jpg"
+1006 = "gebaeude/1006.png"
 1008 = "gebaeude/1008.jpg"
 1009 = "gebaeude/1009.jpg"
 1010 = "gebaeude/1010.jpg"
@@ -269,7 +269,7 @@ s = "img/s.gif"
 abort = "images/abort.gif"
 black_moon = "planeten/black_moon.jpg"
 black_planet = "planeten/black_planet.jpg"
-debris = "planeten/debris.jpg"
+debris = "planeten/debris.gif"
 dschjungelplanet01 = "planeten/dschjungelplanet01.jpg"
 dschjungelplanet02 = "planeten/dschjungelplanet02.jpg"
 dschjungelplanet03 = "planeten/dschjungelplanet03.jpg"
