--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -14,7 +14,7 @@ _inherit = "EpicBlue"
 
 ; Some black magic to support JS-templating
 UNIT_ID = "gebaeude/[UNIT_ID].gif"
-PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
+PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].png"
 
 ; NavBar
 navbar_research = "navbar/navbar_research_64x64.png"
@@ -33,7 +33,7 @@ navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 1003 = "gebaeude/1003.jpg"
 1004 = "gebaeude/1004.jpg"
 1005 = "gebaeude/1005.jpg"
-1006 = "gebaeude/1006.jpg"
+1006 = "gebaeude/1006.png"
 1008 = "gebaeude/1008.jpg"
 1009 = "gebaeude/1009.jpg"
 1010 = "gebaeude/1010.jpg"
@@ -115,39 +115,38 @@ navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 42 = "gebaeude/42.gif"
 43 = "gebaeude/43.gif"
 44 = "gebaeude/44.gif"
-44 = "gebaeude/44.gif"
 501 = "gebaeude/501.gif"
 502 = "gebaeude/502.gif"
 503 = "gebaeude/503.gif"
-601 = "gebaeude/601.gif"
+;601 = "gebaeude/601.gif"
 601 = "gebaeude/601.jpg"
-602 = "gebaeude/602.gif"
+;602 = "gebaeude/602.gif"
 602 = "gebaeude/602.jpg"
-603 = "gebaeude/603.gif"
+;603 = "gebaeude/603.gif"
 603 = "gebaeude/603.jpg"
-604 = "gebaeude/604.gif"
+;604 = "gebaeude/604.gif"
 604 = "gebaeude/604.jpg"
-605 = "gebaeude/605.gif"
+;605 = "gebaeude/605.gif"
 605 = "gebaeude/605.jpg"
-606 = "gebaeude/606.gif"
+;606 = "gebaeude/606.gif"
 606 = "gebaeude/606.jpg"
-607 = "gebaeude/607.gif"
+;607 = "gebaeude/607.gif"
 607 = "gebaeude/607.jpg"
-608 = "gebaeude/608.gif"
+;608 = "gebaeude/608.gif"
 608 = "gebaeude/608.jpg"
-609 = "gebaeude/609.gif"
+;609 = "gebaeude/609.gif"
 609 = "gebaeude/609.jpg"
-610 = "gebaeude/610.gif"
+;610 = "gebaeude/610.gif"
 610 = "gebaeude/610.jpg"
-611 = "gebaeude/611.gif"
+;611 = "gebaeude/611.gif"
 611 = "gebaeude/611.jpg"
-612 = "gebaeude/612.gif"
+;612 = "gebaeude/612.gif"
 612 = "gebaeude/612.jpg"
-613 = "gebaeude/613.gif"
+;613 = "gebaeude/613.gif"
 613 = "gebaeude/613.jpg"
-614 = "gebaeude/614.gif"
+;614 = "gebaeude/614.gif"
 614 = "gebaeude/614.jpg"
-615 = "gebaeude/615.gif"
+;615 = "gebaeude/615.gif"
 615 = "gebaeude/615.jpg"
 901 = "gebaeude/901.jpg"
 902 = "gebaeude/902.jpg"
@@ -260,7 +259,7 @@ starz2 = "img/starz2.png"
 abort = "images/abort.gif"
 black_moon = "planeten/black_moon.jpg"
 black_planet = "planeten/black_planet.jpg"
-debris = "planeten/debris.jpg"
+debris = "planeten/debris.gif"
 dschjungelplanet01 = "planeten/dschjungelplanet01.jpg"
 dschjungelplanet02 = "planeten/dschjungelplanet02.jpg"
 dschjungelplanet03 = "planeten/dschjungelplanet03.jpg"
