INT-feat-40b0.20: Now in main code anywhere for unit images used info from skin.ini. Also minified build_unit.js

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -36,7 +36,7 @@
 
 
 ; Some black magic to support JS-templating
-UNIT_ID = "gebaeude/[UNIT_ID].gif"
+;UNIT_ID = "gebaeude/[UNIT_ID].gif"
 PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].png"
 
 ; NavBar
@@ -112,7 +112,7 @@ r1 = "/design/images/r1.png"
 216 = "gebaeude/216.gif"
 218 = "gebaeude/218.gif"
 219 = "gebaeude/219.gif"
-21_a = "gebaeude/21_a.gif"
+;21_a = "gebaeude/21_a.gif"
 22 = "gebaeude/22.gif"
 220 = "gebaeude/220.gif"
 221 = "gebaeude/221.gif"
