CODE-faet-40b0.23: Class 'skin' reworked

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -34,6 +34,8 @@
 ;        - ??? PTL variable "$xxx" support ?
 ;        - ??? PTL block name "xxx.yyy" support ?
 
+; Plug for no image - to override default system plug
+_no_image = "/design/images/_no_image.png"
 
 ; Some black magic to support JS-templating
 ;UNIT_ID = "gebaeude/[UNIT_ID].gif"
