SYS-misc-40b0.26: Class 'skin': _no_image plug now compiled once on skin init. Each skin can have it's own plug. Some optimization

--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -1,19 +1,12 @@
-; Test Comment
-
-; gebaeude
-
-; _inherit = "none"
-
-; abort = "pic/abort.gif"
-
-; img/galaxie.gif = "pic/abort.gif"
-
-; array_test[index_test] = "pic/test"
+; For details about configuration - see /skins/EpicBlue/skin.ini
 
 _inherit = "EpicBlue"
 
+; Plug for no image - to override inherited system plug
+_no_image = "/design/images/_no_image.png"
+
 ; Some black magic to support JS-templating
-UNIT_ID = "gebaeude/[UNIT_ID].gif"
+; UNIT_ID = "gebaeude/[UNIT_ID].gif"
 PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].png"
 
 ; NavBar
