SKIN-feat-40b0.32: supernova-ivash small planet images resized to standard resolution 88x88

--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -224,7 +224,6 @@ background_1600 = "img/background_1600.jpg"
 background_1920 = "img/background_1920.jpg"
 background_medium = "img/background_medium.jpg"
 background_original = "img/background_original.jpg"
-background_original = "img/background_original.png"
 bg1 = "img/bg1.gif"
 bg2 = "img/bg2.gif"
 blank = "img/blank.gif"
@@ -370,13 +369,12 @@ s_wasserplanet06 = "planeten/small/s_wasserplanet06.jpg"
 s_wasserplanet07 = "planeten/small/s_wasserplanet07.jpg"
 s_wasserplanet08 = "planeten/small/s_wasserplanet08.jpg"
 s_wasserplanet09 = "planeten/small/s_wasserplanet09.jpg"
-; s_[PLANET_IMAGE] = "planeten/small/s_[PLANET_IMAGE].jpg"
-wasserplanet01 = "planeten/small/wasserplanet01.jpg"
-wasserplanet02 = "planeten/small/wasserplanet02.jpg"
-wasserplanet03 = "planeten/small/wasserplanet03.jpg"
-wasserplanet04 = "planeten/small/wasserplanet04.jpg"
-wasserplanet05 = "planeten/small/wasserplanet05.jpg"
-wasserplanet06 = "planeten/small/wasserplanet06.jpg"
-wasserplanet07 = "planeten/small/wasserplanet07.jpg"
-wasserplanet08 = "planeten/small/wasserplanet08.jpg"
-wasserplanet09 = "planeten/small/wasserplanet09.jpg"
+;wasserplanet01 = "planeten/small/wasserplanet01.jpg"
+;wasserplanet02 = "planeten/small/wasserplanet02.jpg"
+;wasserplanet03 = "planeten/small/wasserplanet03.jpg"
+;wasserplanet04 = "planeten/small/wasserplanet04.jpg"
+;wasserplanet05 = "planeten/small/wasserplanet05.jpg"
+;wasserplanet06 = "planeten/small/wasserplanet06.jpg"
+;wasserplanet07 = "planeten/small/wasserplanet07.jpg"
+;wasserplanet08 = "planeten/small/wasserplanet08.jpg"
+;wasserplanet09 = "planeten/small/wasserplanet09.jpg"
