SKIN-feat-40b0.34: Removed duplicate images (same skin or parent) in EpicBlue and supernova-ivash skins

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -65,8 +65,10 @@ r1 = "/design/images/r1.png"
 1005 = "gebaeude/1005.jpg"
 1006 = "gebaeude/1006.png"
 1008 = "gebaeude/1008.jpg"
-1009 = "gebaeude/1009.jpg"
-1010 = "gebaeude/1010.jpg"
+1009 = "gebaeude/1008.jpg"
+1010 = "gebaeude/1008.jpg"
+;1009 = "gebaeude/1009.jpg"
+;1010 = "gebaeude/1010.jpg"
 106 = "gebaeude/106.gif"
 108 = "gebaeude/108.gif"
 109 = "gebaeude/109.gif"
@@ -77,7 +79,7 @@ r1 = "/design/images/r1.png"
 1104 = "gebaeude/1104.jpg"
 1105 = "gebaeude/1105.jpg"
 1106 = "gebaeude/1106.jpg"
-1107 = "gebaeude/1107.jpg"
+1107 = "gebaeude/1107.png"
 111 = "gebaeude/111.gif"
 113 = "gebaeude/113.gif"
 114 = "gebaeude/114.gif"
@@ -93,7 +95,7 @@ r1 = "/design/images/r1.png"
 15 = "gebaeude/15.gif"
 150 = "gebaeude/150.gif"
 151 = "gebaeude/151.gif"
-1601 = "gebaeude/1601.gif"
+1601 = "gebaeude/1601.png"
 199 = "gebaeude/199.gif"
 2 = "gebaeude/2.gif"
 201 = "gebaeude/201.gif"
