--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -1,35 +1,35 @@
 ; For details about configuration - see /skins/EpicBlue/skin.ini
 
-_inherit = "EpicBlue"
+_inherit = "supernova-ivash"
 
 ; Plug for no image - to override inherited system plug
-_no_image = "/design/images/_no_image.png"
+;_no_image = "/design/images/_no_image.png"
 
 ; Some black magic to support JS-templating
 ; UNIT_ID = "gebaeude/[UNIT_ID].gif"
 PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].png"
 
 ; NavBar
-navbar_research = "navbar/navbar_research_64x64.png"
-navbar_research_wide = "navbar/navbar_research_standard.png"
-navbar_hangar = "navbar/navbar_hangar.png"
-navbar_expedition = "navbar/navbar_expedition_standard.png"
-navbar_fleet_own = "navbar/navbar_fleet_own_standard.png"
-navbar_quest = "navbar/navbar_quest_standard.png"
-navbar_mail = "navbar/navbar_mail_standard.png"
-navbar_dark_matter = "navbar/navbar_dark_matter_standard.png"
-navbar_metamatter = "navbar/navbar_metamatter_standard.png"
+navbar_research = "/design/images/navbar_research_64x64.png"
+navbar_research_wide = "/design/images/navbar_research_standard.png"
+navbar_hangar = "/design/images/navbar_hangar.png"
+navbar_expedition = "/design/images/navbar_expedition_standard.png"
+navbar_fleet_own = "/design/images/navbar_fleet_own_standard.png"
+navbar_quest = "/design/images/navbar_quest_standard.png"
+navbar_mail = "/design/images/navbar_mail_standard.png"
+navbar_dark_matter = "/design/images/navbar_dark_matter_standard.png"
+navbar_metamatter = "/design/images/navbar_metamatter_standard.png"
 
 1 = "gebaeude/1.gif"
 1001 = "gebaeude/1001.jpg"
-1002 = "gebaeude/1002.jpg"
-1003 = "gebaeude/1003.jpg"
-1004 = "gebaeude/1004.jpg"
-1005 = "gebaeude/1005.jpg"
-1006 = "gebaeude/1006.png"
-1008 = "gebaeude/1008.jpg"
-1009 = "gebaeude/1009.jpg"
-1010 = "gebaeude/1010.jpg"
+;1002 = "gebaeude/1002.jpg"
+;1003 = "gebaeude/1003.jpg"
+;1004 = "gebaeude/1004.jpg"
+;1005 = "gebaeude/1005.jpg"
+;1006 = "gebaeude/1006.png"
+;1008 = "gebaeude/1008.jpg"
+;1009 = "gebaeude/1009.jpg"
+;1010 = "gebaeude/1010.jpg"
 106 = "gebaeude/106.gif"
 108 = "gebaeude/108.gif"
 109 = "gebaeude/109.gif"
@@ -40,10 +40,10 @@ navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 1104 = "gebaeude/1104.jpg"
 1105 = "gebaeude/1105.jpg"
 1106 = "gebaeude/1106.jpg"
-1107 = "gebaeude/1107.jpg"
+;1107 = "gebaeude/1107.jpg"
 111 = "gebaeude/111.gif"
 113 = "gebaeude/113.gif"
-114 = "gebaeude/114.gif"
+;114 = "gebaeude/114.gif"
 115 = "gebaeude/115.gif"
 117 = "gebaeude/117.gif"
 118 = "gebaeude/118.gif"
@@ -52,11 +52,11 @@ navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 121 = "gebaeude/121.gif"
 122 = "gebaeude/122.gif"
 123 = "gebaeude/123.gif"
-14 = "gebaeude/14.gif"
+14 = "gebaeude/14.jpg"
 15 = "gebaeude/15.gif"
 150 = "gebaeude/150.gif"
 151 = "gebaeude/151.gif"
-1601 = "gebaeude/1601.gif"
+;1601 = "gebaeude/1601.gif"
 199 = "gebaeude/199.gif"
 2 = "gebaeude/2.gif"
 201 = "gebaeude/201.gif"
@@ -69,7 +69,7 @@ navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 207 = "gebaeude/207.gif"
 208 = "gebaeude/208.gif"
 209 = "gebaeude/209.gif"
-21 = "gebaeude/21.gif"
+21 = "gebaeude/21.jpg"
 210 = "gebaeude/210.gif"
 211 = "gebaeude/211.gif"
 212 = "gebaeude/212.gif"
@@ -79,7 +79,7 @@ navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 216 = "gebaeude/216.gif"
 218 = "gebaeude/218.gif"
 219 = "gebaeude/219.gif"
-21_a = "gebaeude/21_a.gif"
+;21_a = "gebaeude/21_a.gif"
 22 = "gebaeude/22.gif"
 220 = "gebaeude/220.gif"
 221 = "gebaeude/221.gif"
@@ -109,7 +109,7 @@ navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 43 = "gebaeude/43.gif"
 44 = "gebaeude/44.gif"
 501 = "gebaeude/501.gif"
-502 = "gebaeude/502.gif"
+502 = "gebaeude/502.jpg"
 503 = "gebaeude/503.gif"
 ;601 = "gebaeude/601.gif"
 601 = "gebaeude/601.jpg"
@@ -245,12 +245,12 @@ p7 = "img/p7.jpg"
 p8 = "img/p8.jpg"
 p9 = "img/p9.jpg"
 s = "img/s.gif"
-saturn2 = "img/saturn2.jpg"
-srgs = "img/srgs.jpg"
-starz2 = "img/starz2.png"
+;saturn2 = "img/saturn2.jpg"
+;srgs = "img/srgs.jpg"
+;starz2 = "img/starz2.png"
 abort = "images/abort.gif"
-black_moon = "planeten/black_moon.jpg"
-black_planet = "planeten/black_planet.jpg"
+;black_moon = "planeten/black_moon.jpg"
+;black_planet = "planeten/black_planet.jpg"
 debris = "planeten/debris.gif"
 dschjungelplanet01 = "planeten/dschjungelplanet01.jpg"
 dschjungelplanet02 = "planeten/dschjungelplanet02.jpg"
@@ -311,8 +311,8 @@ wuestenplanet01 = "planeten/wuestenplanet01.jpg"
 wuestenplanet02 = "planeten/wuestenplanet02.jpg"
 wuestenplanet03 = "planeten/wuestenplanet03.jpg"
 wuestenplanet04 = "planeten/wuestenplanet04.jpg"
-s_black_moon = "planeten/small/s_black_moon.jpg"
-s_black_planet = "planeten/small/s_black_planet.jpg"
+;s_black_moon = "planeten/small/s_black_moon.jpg"
+;s_black_planet = "planeten/small/s_black_planet.jpg"
 s_debris = "planeten/small/s_debris.jpg"
 s_dschjungelplanet01 = "planeten/small/s_dschjungelplanet01.jpg"
 s_dschjungelplanet02 = "planeten/small/s_dschjungelplanet02.jpg"
