SKIN-fix-40b0.35: Fixed errors in supernova-ivash

--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -1,24 +1,24 @@
 ; For details about configuration - see /skins/EpicBlue/skin.ini
 
-_inherit = "supernova-ivash"
+_inherit = "EpicBlue"
 
 ; Plug for no image - to override inherited system plug
 ;_no_image = "/design/images/_no_image.png"
 
 ; Some black magic to support JS-templating
 ; UNIT_ID = "gebaeude/[UNIT_ID].gif"
-PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].png"
+;PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].png"
 
 ; NavBar
-navbar_research = "/design/images/navbar_research_64x64.png"
-navbar_research_wide = "/design/images/navbar_research_standard.png"
-navbar_hangar = "/design/images/navbar_hangar.png"
-navbar_expedition = "/design/images/navbar_expedition_standard.png"
-navbar_fleet_own = "/design/images/navbar_fleet_own_standard.png"
-navbar_quest = "/design/images/navbar_quest_standard.png"
-navbar_mail = "/design/images/navbar_mail_standard.png"
-navbar_dark_matter = "/design/images/navbar_dark_matter_standard.png"
-navbar_metamatter = "/design/images/navbar_metamatter_standard.png"
+navbar_research = "navbar/navbar_research_64x64.png"
+navbar_research_wide = "navbar/navbar_research_standard.png"
+navbar_hangar = "navbar/navbar_hangar.png"
+navbar_expedition = "navbar/navbar_expedition_standard.png"
+navbar_fleet_own = "navbar/navbar_fleet_own_standard.png"
+navbar_quest = "navbar/navbar_quest_standard.png"
+navbar_mail = "navbar/navbar_mail_standard.png"
+navbar_dark_matter = "navbar/navbar_dark_matter_standard.png"
+navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 
 1 = "gebaeude/1.gif"
 1001 = "gebaeude/1001.jpg"
