INT-feat-40c1.3: More work on Planet and Planet Manage pages

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -55,6 +55,10 @@ navbar_metamatter = "/design/images/navbar_metamatter_standard.png"
 
 ; Icons
 r1 = "/design/images/r1.png"
+icon_help_16 = "/design/images/icon_help_16x16.png"
+icon_help_32 = "/design/images/icon_help_32x32.png"
+icon_help_48 = "/design/images/icon_help_48x48.png"
+icon_help_64 = "/design/images/icon_help_64x64.png"
 
 ; Units
 1 = "gebaeude/1.gif"
