SKIN-fix-41a0.3: Fixed typo in skin.ini

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -40,7 +40,7 @@ _no_image = "/design/images/_no_image.png"
 
 ; Some black magic to support JS-templating
 ;UNIT_ID = "gebaeude/[UNIT_ID].gif"
-PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].png"
+PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 
 ; NavBar
 navbar_research = "/design/images/navbar_research_64x64.png"
