--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -59,6 +59,9 @@ icon_help_16 = "/design/images/icon_help_16x16.png"
 icon_help_32 = "/design/images/icon_help_32x32.png"
 icon_help_48 = "/design/images/icon_help_48x48.png"
 icon_help_64 = "/design/images/icon_help_64x64.png"
+icon_ship_capacity_16 = "/design/images/icon_ship_capacity_16x16.png"
+icon_ship_speed_16 = "/design/images/icon_ship_speed_16x16.png"
+icon_ship_consumption_16 = "/design/images/icon_ship_consumption_16x16.png"
 
 ; Units
 1 = "gebaeude/1.gif"
