NOTE-feat-41a3.3: Reworked notes a bit

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -62,6 +62,12 @@ icon_help_64 = "/design/images/icon_help_64x64.png"
 icon_ship_capacity_16 = "/design/images/icon_ship_capacity_16x16.png"
 icon_ship_speed_16 = "/design/images/icon_ship_speed_16x16.png"
 icon_ship_consumption_16 = "/design/images/icon_ship_consumption_16x16.png"
+icon_pin_16 = "/design/images/icon_pin_16x16.png"
+icon_pin_32 = "/design/images/icon_pin_32x32.png"
+icon_pin_64 = "/design/images/icon_pin_64x64.png"
+icon_note_pinned_16 = "/design/images/icon_note_pinned_16x16.png"
+icon_note_pinned_32 = "/design/images/icon_note_pinned_32x32.png"
+icon_note_pinned_64 = "/design/images/icon_note_pinned_64x64.png"
 
 ; Units
 1 = "gebaeude/1.gif"
