--- a/docs/config.php.sample
+++ b/docs/config.php.sample
@@ -1,5 +1,6 @@
 <?php
-if(!defined("INSIDE")){ die("attemp hacking"); }
+
+!defined('INSIDE') && die();
 
 $dbsettings = array(
   'sn_driver'  => 'db_mysql_v5',    // db_mysql_v5 - MySQLi, db_mysql_v4 - простой MySQL. Можно написать свой драйвер
