TEST-misc-41a7.3: Adjusted HelperArrayTests a bit

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -11,3 +11,8 @@ filter:
         - tests/*
         - vendor/*
         - admin/sxd/*
+coding_style:
+    php:
+        indentation:
+            general:
+                size: 2
