--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,40 @@ php:
   # using major version aliases
 
   # aliased to 5.2.17
-  - 5.2
+#  - 5.2
   # aliased to 5.3.29
   - 5.3
   # aliased to a recent 5.4.x version
-  - 5.4
+#  - 5.4
   # aliased to a recent 5.5.x version
-  - 5.5
+#  - 5.5
   # aliased to a recent 5.6.x version
-  - 5.6
+#  - 5.6
   # aliased to a recent 7.x version
-  - 7.0
+#  - 7.0
   # aliased to a recent hhvm version
 #  - hhvm
+
+#matrix:
+#  allow_failures:
+#    - php: nightly
+#    - php: hhvm
+
+sudo: false
+
+before_install:
+  - composer self-update
+
+install:
+  - travis_retry composer install --no-interaction --prefer-source
+
+#script:
+#  - ./phpunit
+#  - ./phpunit --configuration ./build/travis-ci-fail.xml > /dev/null; if [ $? -eq 0 ]; then echo "SHOULD FAIL"; false; else echo "fail checked"; fi;
+#  - xmllint --noout --schema phpunit.xsd phpunit.xml
+#  - xmllint --noout --schema phpunit.xsd tests/_files/configuration.xml
+#  - xmllint --noout --schema phpunit.xsd tests/_files/configuration_empty.xml
+#  - xmllint --noout --schema phpunit.xsd tests/_files/configuration_xinclude.xml -xinclude
 
 # optionally specify a list of environments, for example to test different RDBMS
 #env:
@@ -43,10 +64,17 @@ php:
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
 #script: phpunit --configuration phpunit_$DB.xml --coverage-text
-script: phpunit --configuration tests/phpunit.xml --coverage-text
+script: phpunit --configuration tests/phpunit.xml --coverage-text tests
 
 # configure notifications (email, IRC, campfire etc)
 #notifications:
+#  email: false
+#  webhooks:
+#    urls:
+#      - https://webhooks.gitter.im/e/6668f52f3dd4e3f81960
+#    on_success: always
+#    on_failure: always
+#    on_start: false
 #  irc: "irc.freenode.org#yourfavouriteroomfortravis"
 
 # whitelist
