TEST-misc-41a7.40: Trying to make Travis work

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,8 @@ sudo: false
 before_install:
   - composer self-update
 
-install:
-  - travis_retry composer install --no-interaction --prefer-source
+#install:
+#  - travis_retry composer install --no-interaction --prefer-source
 
 #script:
 #  - ./phpunit
