TEST-misc-41a7.41: More code coverage for HelperArray

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 branches:
   only:
     - work-fleets
-#    - master
+    - master
 
 
 # see http://about.travis-ci.org/docs/user/languages/php/ for more hints
@@ -23,7 +23,7 @@ php:
   # aliased to a recent 5.6.x version
 #  - 5.6
   # aliased to a recent 7.x version
-#  - 7.0
+  - 7.0
   # aliased to a recent hhvm version
 #  - hhvm
 
