--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,26 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 
+# Set the default behavior, in case people don't have core.autocrlf set.
+#* text=auto
+*.php text
+
+# Explicitly declare text files you want to always be normalized and converted
+# to native line endings on checkout.
+#*.c text
+#*.h text
+
+# Declare files that will always have CRLF line endings on checkout.
+#*.sln text eol=crlf
+
+# Denote all files that are truly binary and should not be modified.
 *.jpg binary
 *.gif binary
 *.png binary
 *.ttf binary
 *.zip binary
 *.rar binary
+*.7z binary
 *.gz binary
+*.bz* binary
+*.tar binary
