--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 *.html text
 *.css text
 *.ini text
+*.js text
 
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
