CI-41a51.1: Changed command for Scrutinizer to run my own version of phpUnit

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,7 +2,7 @@ build:
     tests:
         override:
             -
-                command: 'phpunit --coverage-clover=some-file tests --config tests/phpunit.xml'
+                command: 'vendor/bin/phpunit --coverage-clover=some-file tests --config tests/phpunit.xml'
                 coverage:
                     file: 'some-file'
                     format: 'clover'
