--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,8 @@ before_install:
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
 #script: phpunit --configuration phpunit_$DB.xml --coverage-text
-script: phpunit --configuration tests/phpunit.xml --coverage-text tests
+#script: phpunit --configuration tests/phpunit.xml --coverage-text tests
+script: vendor/bin/phpunit --configuration tests/phpunit.xml --coverage-text tests
 
 # configure notifications (email, IRC, campfire etc)
 #notifications:
