--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -8,11 +8,34 @@ build:
                     format: 'clover'
 filter:
     excluded_paths:
-        - tests/*
+## Excluding Tests, Specs and Vendor Directories at any Level
+#        - tests/*
+        - tests/**/*
+        - tests.int/**/*
         - vendor/*
-        - admin/sxd/*
+        - "**/vendor/**/*"
+        - spec/**/*
+# Excluding Sypex Dumper files
+#        - admin/sxd/*
+        - "admin/sxd/**/*"
+# Excluding minified files
+        - "**.min.js"
+        - "**.min.css"
 coding_style:
     php:
         indentation:
             general:
                 size: 2
+        spaces:
+            around_operators:
+                concatenation: true
+        braces:
+            classes_functions:
+                class: end-of-line
+                function: end-of-line
+                closure: end-of-line
+        upper_lower_casing:
+            keywords:
+                general: lower
+            constants:
+                true_false_null: lower
