CI-41a52.77: Patched Scrutenizer configuration

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -22,10 +22,10 @@ filter:
 # Excluding minified files
 #        - "**.min.js"
 #        - "**.min.css"
-        - *.min.js
-#        - **.min.js
-        - *.min.css
-#        - **.min.css
+#        - *.min.js
+        - **.min.js
+#        - *.min.css
+        - **.min.css
 coding_style:
     php:
         indentation:
