--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -23,9 +23,9 @@ filter:
 #        - "**.min.js"
 #        - "**.min.css"
 #        - *.min.js
-        - **.min.js
+        - **/*.min.js
 #        - *.min.css
-        - **.min.css
+        - **/**.min.css
 coding_style:
     php:
         indentation:
