CI-41a52.79: Patched Scrutenizer configuration

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -23,7 +23,7 @@ filter:
 #        - "**.min.js"
 #        - "**.min.css"
 #        - *.min.js
-        - **/*.min.js
+        - **/**.min.js
 #        - *.min.css
         - **/**.min.css
 coding_style:
