--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -20,12 +20,12 @@ filter:
         - admin/sxd/*
 #        - "admin/sxd/**/*"
 # Excluding minified files
-#        - "**.min.js"
-#        - "**.min.css"
+        - "**.min.js"
+        - "**.min.css"
 #        - *.min.js
-        - **/**.min.js
+#        - **/**.min.js
 #        - *.min.css
-        - **/**.min.css
+        - **/**/*.min.css
 coding_style:
     php:
         indentation:
