--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -9,23 +9,24 @@ build:
 filter:
     excluded_paths:
 ## Excluding Tests, Specs and Vendor Directories at any Level
-        - tests/*
+        - tests/
 #        - tests/**/*
-        - tests.int/*
+        - tests.int/
 #        - tests.int/**/*
-        - vendor/*
+        - vendor/
 #        - "**/vendor/**/*"
-        - spec/*
+        - spec/
 # Excluding Sypex Dumper files
         - admin/sxd/*
 #        - "admin/sxd/**/*"
 # Excluding minified files
-        - "**.min.js"
-        - "**.min.css"
+#        - "**.min.js"
+#        - "**.min.css"
 #        - *.min.js
 #        - **/**.min.js
 #        - *.min.css
-        - **/**/*.min.css
+        - */*/*.min.css
+        - */*/*.min.js
 coding_style:
     php:
         indentation:
